<resources>
    <string name="app_name">Instore</string>
    <string name="nuovi_arrivi">Nuovi\nArrivi</string>
    <string name="donna">Donna</string>
    <string name="uomo">Uomo</string>
    <string name="bambino">Bambino</string>
    <string name="cart">Cart</string>
    <string name="nuovi_arrivi_menu">Nuovi Arrivi</string>
    <string name="home_label">Home</string>
    <string name="clothes_label">Catalogo</string>
    <string name="dress_label">\t</string>
    <string name="cart_label">Carrello</string>
    <string name="search">Search</string>
    <string name="bambina_label">Bambina</string>
    <string name="taglia_label">Taglia</string>
    <string name="nome_label">Nome</string>
    <string name="foto_dress_label">Foto</string>
    <string name="prezzo_label">Prezzo</string>
    <string name="colore_label">Colore</string>
    <string name="descrizione_label">Descrizione</string>
    <string name="aggiungi_label">AGGIUNGI</string>
    <string name="quantita_label">Quantita</string>
    <string name="filtri">Filtri</string>
    <string name="mostra_risultati">Mostra Risultati</string>
    <string name="benvenuto">Benvenuto su InStore</string>
    <string name="consulta">Consulta il nostro catalogo digitale.</string>
    <string name="grid_button">Grid Button</string>
    <string name="square_button">Square Button</string>
    <string name="colore_prefix">Colore:</string>
    <string name="cod_prefix">Cod:</string>
    <string name="aggiungi_button">Aggiungi</string>
    <string name="swipe_right">Swipe Right</string>
    <string name="swipe_left">Swipe Left</string>
    <string name="acquista">Acquista</string>
    <string name="tot">Totale:</string>
    <string name="carrello_vuoto">Il tuo carrello è vuoto.</string>
    <string name="logo">Logo</string>
    <string name="qr_scan">Scan</string>
    <string name="no_result">Nessun risultato trovato.</string>
    <string name="delete">Delete</string>
</resources>
