<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="8dp">

    <TextView
        android:id="@+id/textNomeCart"
        style="@style/StyleDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nome_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textColoreCart"
        app:layout_constraintStart_toEndOf="@+id/imageCart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textColoreCart"
        style="@style/StyleAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colore_label"
        app:layout_constraintBottom_toTopOf="@+id/textTaglia"
        app:layout_constraintStart_toStartOf="@+id/textNomeCart"
        app:layout_constraintTop_toBottomOf="@+id/textNomeCart" />

    <ImageView
        android:id="@+id/imageCart"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/foto_dress_label"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/common_google_signin_btn_icon_light_normal_background" />

    <ImageButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/delete"
        android:src="@drawable/aggiungi_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTaglia"
        style="@style/StyleAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taglia_label"
        app:layout_constraintBottom_toTopOf="@+id/textQuantita"
        app:layout_constraintStart_toStartOf="@+id/textColoreCart"
        app:layout_constraintTop_toBottomOf="@+id/textColoreCart" />

    <TextView
        android:id="@+id/textCodiceCart"
        style="@style/StyleAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cod_prefix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textQuantita"
        app:layout_constraintTop_toBottomOf="@+id/textQuantita" />

    <TextView
        android:id="@+id/textQuantita"
        style="@style/StyleAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantita_label"
        app:layout_constraintBottom_toTopOf="@+id/textCodiceCart"
        app:layout_constraintStart_toStartOf="@+id/textTaglia"
        app:layout_constraintTop_toBottomOf="@+id/textTaglia" />

</androidx.constraintlayout.widget.ConstraintLayout>