<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.instore.home.HomeFragment"
        android:label="@string/home_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_clothesFragment"
            app:destination="@id/clothesFragment" />
    </fragment>
    <fragment
        android:id="@+id/clothesFragment"
        android:name="com.example.instore.clothes.ClothesFragment"
        android:label=""
        tools:layout="@layout/fragment_clothes">
        <action
            android:id="@+id/action_clothesFragment_to_dressFragment"
            app:destination="@id/dressFragment" />
        <argument
            android:name="categoria"
            android:defaultValue='""'
            app:argType="string" />
        <action
            android:id="@+id/action_clothesFragment_to_filtroFragment"
            app:destination="@id/filtroFragment" />
    </fragment>
    <fragment
        android:id="@+id/dressFragment"
        android:name="com.example.instore.dress.DressFragment"
        android:label="@string/dress_label"
        tools:layout="@layout/fragment_dress">
        <argument
            android:name="idProdotto"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.instore.cart.CartFragment"
        android:label="@string/cart_label"
        tools:layout="@layout/fragment_cart">
    </fragment>
    <fragment
        android:id="@+id/filtroFragment"
        android:name="com.example.instore.filtro.FiltroFragment"
        android:label="@string/filtri"
        tools:layout="@layout/fragment_filtro" >
        <action
            android:id="@+id/action_filtroFragment_to_clothesFragment"
            app:destination="@id/clothesFragment" />
    </fragment>
</navigation>